force-app/main/default/objects/Reponse_CR__c/Reponse_CR__c.object-meta.xml
<CustomObject>
    <description>Réponses des questionnaires VA/VAP.</description>
    <label>Réponse CR</label>
    <nameField>
        <label>Nom de réponse CR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Réponses CR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>