force-app/main/default/objects/Reponse_CR__c/fields/Changement_macro_profil__c.field-meta.xml
<CustomField>
    <fullName>Changement_macro_profil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changement macro profil</label>
    <type>Checkbox</type>
</CustomField>