force-app/main/default/objects/Reponse_CR__c/fields/Compte_rendu_rempli__c.field-meta.xml
<CustomField>
    <fullName>Compte_rendu_rempli__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte rendu rempli</label>
    <referenceTo>Compte_rendu_rempli__c</referenceTo>
    <relationshipLabel>Comptes rendu de visite</relationshipLabel>
    <relationshipName>Reponses_CR</relationshipName>
    <type>Lookup</type>
</CustomField>