force-app/main/default/objects/Reponse_CR__c/fields/Numero_Question_Parent__c.field-meta.xml
<CustomField>
    <fullName>Numero_Question_Parent__c</fullName>
    <label>Numero_Question_Parent</label>
    <length>81</length>
    <type>Text</type>
</CustomField>