force-app/main/default/objects/Reponse_CR__c/fields/Ordre_d_affichage__c.field-meta.xml
<CustomField>
    <fullName>Ordre_d_affichage__c</fullName>
    <label>Ordre d&#39;affichage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>