force-app/main/default/objects/Reponse_CR__c/fields/Questions_CR__c.field-meta.xml
<CustomField>
    <fullName>Questions_CR__c</fullName>
    <label>Questions CR</label>
    <referenceTo>Questions_CR__c</referenceTo>
    <relationshipLabel>Réponses CR (Questions CR)</relationshipLabel>
    <relationshipName>Reponses_CR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>