force-app/main/default/objects/Reponse_CR__c/fields/Reponse__c.field-meta.xml
<CustomField>
    <fullName>Reponse__c</fullName>
    <label>Réponse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>