force-app/main/default/objects/Reponse_CR__c/fields/Reponse_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Reponse_FollowUp__c</fullName>
    <label>Reponse_FollowUp</label>
    <length>81</length>
    <type>Text</type>
</CustomField>