force-app/main/default/objects/Reponse_CR__c/fields/Type_de_r_ponse__c.field-meta.xml
<CustomField>
    <fullName>Type_de_r_ponse__c</fullName>
    <label>Type de réponse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Choix</fullName>
            </value>
            <value>
                <fullName>Multi-choix</fullName>
            </value>
            <value>
                <fullName>Texte</fullName>
            </value>
            <value>
                <fullName>Titre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>